Added view of reset password

--- a/frontend/src/app/components/menu-components/reset-password/reset-password.component.html
+++ b/frontend/src/app/components/menu-components/reset-password/reset-password.component.html
@@ -1,1 +1,16 @@
-<p>reset-password works!</p>
+<div class="reset-password">
+  <h2>Resetowanie hasła</h2>
+  <form [formGroup]="resetPasswordForm" (ngSubmit)="sendResetPasswordEmail()">
+    <div class="input-container">
+      <label for="email">Email</label>
+      <input id="email" type="email" formControlName="email" placeholder="Wprowadź swój email" required>
+    </div>
+    <div class="error-container" *ngIf="isResetError">
+      <p>{{ resetMessage }}</p>
+    </div>
+    <button type="submit">Wyślij email resetujący hasło</button>
+  </form>
+  <div class="message-container" *ngIf="resetMessage && !isResetError">
+    <p>{{ resetMessage }}</p>
+  </div>
+</div>
