--- a/frontend/src/app/components/admin-components/order-monitoring/monitor-order-item/monitor-order-item.component.css
+++ b/frontend/src/app/components/admin-components/order-monitoring/monitor-order-item/monitor-order-item.component.css
@@ -8,7 +8,7 @@
   padding: 20px;
   background-color: #ffffff;
   border-radius: 30px;
-  box-shadow: #efb970 0px 0px 10px;
+  box-shadow: #efb970 0 0 10px;
   overflow: hidden;
   position: relative;
 }
