--- a/frontend/src/app/components/order-components/payment-item/payment-item.component.html
+++ b/frontend/src/app/components/order-components/payment-item/payment-item.component.html
@@ -1,4 +1,4 @@
 <div class="container" (click)="setPayment()">
-  <img [src]="payment.image">
+  <img [src]="payment.image" alt="">
   <p> {{payment.method}}</p>
 </div>
