--- a/frontend/src/app/components/order-components/order-personal-info/order-personal-info.component.css
+++ b/frontend/src/app/components/order-components/order-personal-info/order-personal-info.component.css
@@ -15,7 +15,7 @@
   margin-top: 20px;
   border-radius: 18px;
   border: 3px solid #e8e8e8;
-  box-shadow: #b7b7b7 0px 5px 10px 0px;
+  box-shadow: #b7b7b7 0 5px 10px 0;
 
 }
 
