--- a/frontend/src/app/components/restaurant-menu-components/info/info.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/info/info.component.css
@@ -69,7 +69,7 @@
   justify-content: center;
   margin: 5px;
   background-color: white;
-  border: 0.1px solid #a1a0a0;
+  border: 0 solid #a1a0a0;
   border-radius: 10px;
 }
 
