--- a/frontend/src/app/components/restaurant-menu-components/restaurant-menu-item/restaurant-menu-item.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-menu-item/restaurant-menu-item.component.css
@@ -88,8 +88,7 @@
   justify-content: center;
   width: 90%;
   height: 40px;
-  margin: 0;
-  margin-bottom: 10px;
+  margin: 0 0 10px;
 }
 
 .category-container {
