--- a/frontend/src/app/components/restaurant-menu-components/info/info.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/info/info.component.html
@@ -1,5 +1,5 @@
 <div class="info-container">
-  <app-info-map [restaurantId]="restaurantId"></app-info-map>
+  <app-info-map [restaurantId]="searchedRestaurant.restaurantId"></app-info-map>
 
   <div class="content">
     <div class="title">
