--- a/frontend/src/app/components/menu-components/menu-addresses/menu-address-change/menu-address-change.component.css
+++ b/frontend/src/app/components/menu-components/menu-addresses/menu-address-change/menu-address-change.component.css
@@ -16,6 +16,11 @@
   z-index: 100;
   border-radius: 30px;
   font-family: 'Fira Sans', sans-serif;
+  max-height: 90vh;
+  overflow-y: scroll; /* Enable vertical scrolling */
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+
 
 }
 
